refactor: 명세서 양식 통일 작업2 + README.md 추가